[package]
name = "git-hunk"
version = "0.1.3"
edition = "2024"
description = "Non-interactive hunk staging for AI agents"
repository = "https://github.com/nexxeln/git-hunk"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
blake3 = "1.8.2"
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"

[dev-dependencies]
assert_cmd = "2.0.17"
